--- a/gradle/jmh.gradle
+++ b/gradle/jmh.gradle
@@ -21,7 +21,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'me.champeau.gradle:jmh-gradle-plugin:0.4.5-beta-1'
+        classpath 'me.champeau.gradle:jmh-gradle-plugin:0.4.5'
     }
 }
 
