Update Android performance tests
Use Android 3.0 now that it is stable, making it much more
important to test against than Android 2.3.

The Android studio Sync mockup was ignoring the fact that
Studio also runs some tasks. This commit corrects this to
make the test more realistic.

--- a/subprojects/performance/templates.gradle
+++ b/subprojects/performance/templates.gradle
@@ -296,12 +296,12 @@ task bigCppMulti(type: CppMultiProjectGeneratorTask) {
 // === Android ===
 task k9AndroidBuild(type: RemoteProject) {
     remoteUri = 'https://github.com/gradle/perf-android-k-9.git'
-    branch = 'gradle'
+    branch = 'android-30'
 }
 
 task largeAndroidBuild(type: RemoteProject) {
     remoteUri = 'https://github.com/gradle/perf-android-large.git'
-    branch = 'gradle'
+    branch = 'android-30'
 }
 
 task excludeRuleMergingBuild(type: RemoteProject) {
