--- a/subprojects/internal-android-performance-testing/internal-android-performance-testing.gradle
+++ b/subprojects/internal-android-performance-testing/internal-android-performance-testing.gradle
@@ -3,9 +3,13 @@ configurations {
     compile.extendsFrom androidTools
 }
 
+repositories {
+    google()
+}
+
 dependencies {
     compile project(':toolingApi')
-    androidTools 'com.android.tools.build:gradle:2.3.0'
+    androidTools 'com.android.tools.build:gradle:3.0.0'
 }
 
 task buildClassPath(type: BuildClassPath) {
