Remove from sanity check
Build execution takes too long. Will be part of Branch Build Accept.

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ archivesBaseName = 'gradle'
 
 buildTypes {
     sanityCheck {
-        tasks "classes", "doc:checkstyleApi", "codeQuality", "docs:check", "distribution:checkBinaryCompatibility", "javadocAll", "dependencyCheckAnalyze"
+        tasks "classes", "doc:checkstyleApi", "codeQuality", "docs:check", "distribution:checkBinaryCompatibility", "javadocAll"
         projectProperties ignoreIncomingBuildReceipt: true
     }
 
