Improve layout and vertical rhythm for docs
This change improves readability of documentation pages in the
following ways:
 - Reduce width of content area, making tracking a single line
   easier
 - Unifies vertical rhythm and header styles with other Gradle
   properties
 - Lots of stylistic tweaks that make the pages pleasant
 - Uses system monospace font instead of Ubuntu Mono,
   improving page speed and consistency with other Gradle sites

Issue: gradle/dotorg-docs#61

--- a/subprojects/docs/src/transforms/release-notes.gradle
+++ b/subprojects/docs/src/transforms/release-notes.gradle
@@ -211,7 +211,7 @@ transformDocument {
 // Wrap the page in a text container to get the margins
 transformDocument {
     def bodyContent = body().children().remove()
-    body().prepend("<div class='text-container'/>")
+    body().prepend("<div class='container'/>")
     body().children()[0].html(bodyContent.outerHtml())
 }
 
