--- a/subprojects/docs/src/samples/providers/propertyAndProvider/build.gradle
+++ b/subprojects/docs/src/samples/providers/propertyAndProvider/build.gradle
@@ -9,7 +9,7 @@ class Greeting extends DefaultTask {
 
     @TaskAction
     void printMessage() {
-        logger.lifecycle(fullMessage.get())
+        logger.quiet(fullMessage.get())
     }
 }
 
