Coverage for groovy/kotlin build generation by init build plugin

--- a/subprojects/build-init/build-init.gradle
+++ b/subprojects/build-init/build-init.gradle
@@ -18,6 +18,9 @@ dependencies {
     compile project(':core')
     compile project(':plugins')
     compile project(':wrapper')
+
+    testFixturesImplementation project(":internalTesting")
+
     integTestRuntime project(':maven')
     integTestRuntime project(':scala')
 }
