--- a/subprojects/performance/src/templates/cpp-project/build.gradle
+++ b/subprojects/performance/src/templates/cpp-project/build.gradle
@@ -1,10 +1,15 @@
-plugins {
-    <% if (projectType == 'exe') { %>
-    id 'cpp-application'
-    <% } else { %>
-    id 'cpp-library'
-    <% } %>
+import org.gradle.util.GradleVersion
+
+<% if (projectType == 'exe') { %>
+// TODO: Remove this once we bump the minimum version of the test
+if (GradleVersion.current() < GradleVersion.version("4.4")) {
+    apply plugin: 'cpp-executable'
+} else {
+    apply plugin: 'cpp-application'
 }
+<% } else { %>
+apply plugin: 'cpp-library'
+<% } %>
 
 <% if (projectDeps.size() > 0) { %>
 dependencies {
