--- a/gradle/taskProperties.gradle
+++ b/gradle/taskProperties.gradle
@@ -3,7 +3,7 @@ afterEvaluate {
         validator.dependsOn sourceSets.main.output
         validator.classes = sourceSets.main.output.classesDirs
         validator.classpath = sourceSets.main.runtimeClasspath
-        validator.outputFile = "$buildDir/reports/task-properties/report.txt"
+        validator.outputFile = project.layout.buildDir.file("reports/task-properties/report.txt")
         validator.failOnWarning = true
     }
 }
