--- a/gradle/wrapper.gradle
+++ b/gradle/wrapper.gradle
@@ -25,8 +25,8 @@ def wrapperUpdateTask = { name, label ->
                 if (version.empty) {
                     throw new GradleException("Cannot update wrapper to '${label}' version as there is currently no version of that label")
                 }
-                println "updating wrapper to $label version: $version.version (downloadUrl: $version.downloadUrl)"
-                distributionUrl version.downloadUrl
+                distributionUrl version.downloadUrl.replace("-bin", "-all")
+                println "updating wrapper to $label version: $version.version (distributionUrl: $distributionUrl)"
             }
         }
     }
