Favour declarative plugin application in build scripts

--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,12 @@
 import org.gradle.build.Install
 import org.gradle.cleanup.EmptyDirectoryCheck
 
+plugins {
+    id 'java-base'
+    id 'org.gradle.build-types'
+}
+
 defaultTasks 'assemble'
-apply plugin: 'java-base'
-apply plugin: 'build-types'
 archivesBaseName = 'gradle'
 
 buildTypes {
