--- a/subprojects/model-groovy/model-groovy.gradle
+++ b/subprojects/model-groovy/model-groovy.gradle
@@ -18,7 +18,9 @@
 /*
  * Groovy specific adaptions to the model management.
  */
-apply plugin: 'java-library'
+plugins {
+    id 'java-library'
+}
 
 sourceCompatibility = javaVersion.java9Compatible ? 1.6 : 1.5
 
