--- a/subprojects/cli/cli.gradle
+++ b/subprojects/cli/cli.gradle
@@ -20,7 +20,9 @@
     It's packaged separately because it's used by multiple “applications” (i.e. gradle core and the wrapper).
     It has no dependencies, and should never have any.
 */
-apply plugin: 'java-library'
+plugins {
+    id 'java-library'
+}
 
 sourceCompatibility = javaVersion.java9Compatible ? 1.6 : 1.5
 
