--- a/subprojects/core/core.gradle
+++ b/subprojects/core/core.gradle
@@ -13,7 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-apply plugin: 'java-library'
+plugins {
+    id 'java-library'
+}
 apply from: "$rootDir/gradle/taskProperties.gradle"
 
 sourceCompatibility = javaVersion.java9Compatible ? 1.6 : 1.5
