--- a/subprojects/internal-performance-testing/internal-performance-testing.gradle
+++ b/subprojects/internal-performance-testing/internal-performance-testing.gradle
@@ -13,7 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-apply plugin: 'javascript-base'
+plugins {
+    id 'javascript-base'
+}
 
 configurations {
     reports
