--- a/subprojects/logging/logging.gradle
+++ b/subprojects/logging/logging.gradle
@@ -1,7 +1,9 @@
 /**
  * Logging infrastructure.
  */
-apply plugin: 'java-library'
+plugins {
+    id 'java-library'
+}
 
 sourceCompatibility = javaVersion.java9Compatible ? 1.6 : 1.5
 
