--- a/subprojects/model-core/model-core.gradle
+++ b/subprojects/model-core/model-core.gradle
@@ -17,7 +17,9 @@
 /*
  * The model management core.
  */
-apply plugin: 'java-library'
+plugins {
+    id 'java-library'
+}
 
 sourceCompatibility = javaVersion.java9Compatible ? 1.6 : 1.5
 
