Rename plugin id from org.gradle.build-types to build-types

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ import org.gradle.cleanup.EmptyDirectoryCheck
 
 plugins {
     id 'java-base'
-    id 'org.gradle.build-types'
+    id 'build-types'
 }
 
 defaultTasks 'assemble'
