Use viewport meta tag in release notes pages
Users can now comfortably read release notes on mobile devices. See:

 https://developer.mozilla.org/en-US/docs/Mozilla/Mobile/Viewport_meta_tag

Issue: gradle/dotorg-docs#25

--- a/subprojects/docs/src/transforms/release-notes.gradle
+++ b/subprojects/docs/src/transforms/release-notes.gradle
@@ -28,6 +28,7 @@ transformDocument {
 
     head().
             append("<meta charset='utf-8'>").
+            append("<meta name='viewport' content='width=device-width, initial-scale=1'>").
             append("<title>Gradle @version@ Release Notes</title>")
 
     head().append("<style>p{}</style>").children().last().childNode(0).attr("data", baseStyleFile.text + releaseNotesStyleFile.text)
