--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -24,6 +24,7 @@ versions.commons_io = '2.2'
 versions.groovy = '2.4.12'
 versions.bouncycastle = '1.58'
 versions.maven = '3.0.4'
+versions.httpclient = '4.4.1'
 
 libraries.ant = 'org.apache.ant:ant:1.9.9'
 libraries.asm =  'org.ow2.asm:asm-debug-all:6.0_BETA'
@@ -55,7 +56,7 @@ libraries.jetty_util = "org.mortbay.jetty:jetty-util:6.1.26"
 libraries.jetty = "org.mortbay.jetty:jetty:6.1.26"
 libraries.commons_codec = "commons-codec:commons-codec:1.6"
 libraries.jcifs = "org.samba.jcifs:jcifs:1.3.17"
-libraries.commons_httpclient = 'org.apache.httpcomponents:httpclient:4.4.1'
+libraries.commons_httpclient = "org.apache.httpcomponents:httpclient:${versions.httpclient}"
 
 
 libraries += [
@@ -250,10 +251,16 @@ allprojects { currentProject ->
             }
             withModule('com.amazonaws:aws-java-sdk-core') {
                 withVariant('default') {
-                    withDependencies { it.removeAll { it.name == 'jackson-dataformat-cbor' || it.group == 'commons-logging' } }
+                    withDependencies {
+                        it.removeAll { it.name == 'jackson-dataformat-cbor' || it.group == 'commons-logging' }
+                        it.findAll { it.name == 'httpclient' }.each { changeVersionInMetadata it, versions.httpclient }
+                    }
                 }
                 withVariant('runtime') {
-                    withDependencies { it.removeAll { it.name == 'jackson-dataformat-cbor' || it.group == 'commons-logging' } }
+                    withDependencies {
+                        it.removeAll { it.name == 'jackson-dataformat-cbor' || it.group == 'commons-logging' }
+                        it.findAll { it.name == 'httpclient' }.each { changeVersionInMetadata it, versions.httpclient }
+                    }
                 }
             }
             withModule('dom4j:dom4j') {
