--- a/gradle/distributionTesting.gradle
+++ b/gradle/distributionTesting.gradle
@@ -243,7 +243,7 @@ project(":") {
 }
 
 def forEachJavaProcess(Closure action) {
-    String queryString = LeakingProcessKillPattern.generate(rootProject.projectDir.absolutePath, rootProject.buildDir.absolutePath)
+    String queryString = LeakingProcessKillPattern.generate(rootProject.projectDir.absolutePath)
     def output = new ByteArrayOutputStream()
     def error = new ByteArrayOutputStream()
     def pidPattern
