build-init integ tests do not require a gradle distribution
at the expense of a large integTestRuntime classpath
running them from both cli & ide now works and take code changes into account

--- a/subprojects/build-init/build-init.gradle
+++ b/subprojects/build-init/build-init.gradle
@@ -21,8 +21,7 @@ dependencies {
 
     testFixturesImplementation project(":internalTesting")
 
-    integTestRuntime project(':maven')
-    integTestRuntime project(':scala')
+    integTestRuntime rootProject.configurations.testRuntime.allDependencies
 }
 
 useTestFixtures()
