--- a/subprojects/docs/src/transforms/release-notes.gradle
+++ b/subprojects/docs/src/transforms/release-notes.gradle
@@ -29,7 +29,8 @@ transformDocument {
     head().
             append("<meta charset='utf-8'>").
             append("<meta name='viewport' content='width=device-width, initial-scale=1'>").
-            append("<title>Gradle @version@ Release Notes</title>")
+            append("<title>Gradle @version@ Release Notes</title>").
+            append("<link rel='stylesheet' type='text/css' href='https://assets.gradle.com/lato/css/lato-font.css'/>")
 
     head().append("<style>p{}</style>").children().last().childNode(0).attr("data", baseStyleFile.text + releaseNotesStyleFile.text)
 
