Updates based on code review from Stefan Oehme

--- a/subprojects/language-java/language-java.gradle
+++ b/subprojects/language-java/language-java.gradle
@@ -7,7 +7,7 @@ dependencies {
     compile project(":platformJvm")
     compile project(":languageJvm")
 
-    compile 'org.gradle.incap:incap-build-client:0.0.4'
+    compile 'org.gradle.incap:incap-build-client:0.0.7-SNAPSHOT'
 
     // TODO - get rid of this cycle
     integTestRuntime project(':plugins')
