--- a/build.gradle
+++ b/build.gradle
@@ -194,6 +194,7 @@ allprojects {
         maven { url 'https://repo.gradle.org/gradle/libs-milestones' }
         maven { url "https://repo.gradle.org/gradle/libs-snapshots" }
         maven { url 'https://dl.bintray.com/incap/incap' }
+        maven { url 'https://repo.gradle.org/gradle/libs-snapshots' }
     }
 
     // patchExternalModules lives in the root project - we need to activate normalization there, too.
