--- a/gradle/compile.gradle
+++ b/gradle/compile.gradle
@@ -7,7 +7,7 @@ if (!hasProperty('java7Home')) {
     // possible to set compilation with Java 7 from the command line and from gradle.properties.
     // Note that is this needs to work for buildSrc, too. Gradle properties passed
     // on the command line (-P) are not inherited to buildSrc while system properties are.
-    ext.java7Home = System.getProperty('java7.home')
+    ext.java7Home = System.getProperty('java7Home')
 }
 
 def javaInstallationProbe = gradle.services.get(JavaInstallationProbe)
