Java 9 smoke testing make use of testJavaHome
instead of creating ad-hoc java9*Test tasks

Signed-off-by: Paul Merlin <paul@gradle.com>

--- a/subprojects/testing-jvm/testing-jvm.gradle
+++ b/subprojects/testing-jvm/testing-jvm.gradle
@@ -30,7 +30,7 @@ dependencies {
 
 }
 
-configure([test, java9Test]) {
+test {
     exclude 'org/gradle/api/internal/tasks/testing/junit/ATestClass*.*'
     exclude 'org/gradle/api/internal/tasks/testing/junit/ABroken*TestClass*.*'
 }
