Add proper testing and enhance content on binary dependencies

--- a/subprojects/docs/src/samples/userguide/dependencies/declaringBinaryDependenciesWithConcreteVersion/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/declaringBinaryDependenciesWithConcreteVersion/build.gradle
@@ -10,4 +10,7 @@ dependencies {
 }
 //END SNIPPET binary-dependencies
 
-
+task copyLibs(type: Copy) {
+    from configurations.compileClasspath
+    into "$buildDir/libs"
+}
