--- a/settings.gradle
+++ b/settings.gradle
@@ -81,6 +81,7 @@ include 'buildCacheHttp'
 include 'testingBase'
 include 'testingNative'
 include 'testingJvm'
+include 'testingJunitPlatform'
 include 'platformPlay'
 include 'testKit'
 include 'installationBeacon'
