--- a/subprojects/testing-jvm/testing-jvm.gradle
+++ b/subprojects/testing-jvm/testing-jvm.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile libraries.testng
     compile libraries.bsh
 
+    compileOnly libraries.junitPlatform
+
     testCompile 'com.google.inject:guice:2.0@jar' // this is for TestNG
 
 }
