--- a/subprojects/native/native.gradle
+++ b/subprojects/native/native.gradle
@@ -1,7 +1,9 @@
 /*
     This project contains various native operating system integration utilities.
 */
-apply plugin: 'java-library'
+plugins {
+    id 'java-library'
+}
 
 sourceCompatibility = javaVersion.java9Compatible ? 1.6 : 1.5
 
